Added razor pages and the approved claim view

--- a/prog6212-part3-ST10456157/Views/Manager/Index.cshtml
+++ b/prog6212-part3-ST10456157/Views/Manager/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<prog6212_part3_ST10456157.Models.Claim>
+﻿@model IEnumerable<prog6212_part3_ST10456157.Models.LecturerClaim>
 
 <h2>Manager Dashboard</h2>
 
